--- a/src/app/layouts/insurance-manager/insurance-manager.component.scss
+++ b/src/app/layouts/insurance-manager/insurance-manager.component.scss
@@ -1,4 +1,7 @@
+@import '../../styles/index.scss';
+
 :host {
+  background: $white;
   overflow: auto;
   display: grid;
   height: 100%;
