--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -20,10 +20,10 @@ $default-font-size: 1.6rem;
 // colors
 $primary: #001f3f;
 $red: #85144b;
-$white: #ddd;
+$grey: #ddd;
 $green: #2ecc40;
 $blue: #0074d9;
-
+$white: #ffffff;
 // measurments
 $header-height: 5rem;
 $brand-width: 3rem;
