--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,8 @@ img {
   position: absolute;
   width: 100%;
   height: 100%;
+  left: 0;
+  top: 0;
 }
 
 button {
@@ -41,7 +43,7 @@ button {
   @include respond(tab) {
     // width: 80vw !important;
   }
-  @include respond(phone){
+  @include respond(phone) {
     width: 100vw !important;
   }
 }
